--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/react-webpack5": "^7.4.0",
     "@swc-node/register": "^1.6.6",
     "@swc/core": "^1.3.68",
+    "@swc/jest": "^0.2.26",
     "@testing-library/dom": "^8.11.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
