--- a/packages/perseus/package.json
+++ b/packages/perseus/package.json
@@ -29,7 +29,8 @@
         "@khanacademy/perseus-linter": "^0.3.10",
         "@khanacademy/pure-markdown": "^0.2.13",
         "@khanacademy/simple-markdown": "^0.11.2",
-        "@khanacademy/wonder-blocks-banner": "^3.0.33"
+        "@khanacademy/wonder-blocks-banner": "^3.0.33",
+        "mafs": "^0.17.1"
     },
     "devDependencies": {
         "@khanacademy/wonder-blocks-button": "^6.2.5",
