--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.12",
     "@babel/preset-typescript": "^7.23.2",
+    "@biomejs/biome": "1.5.3",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.22.0",
     "@cypress/code-coverage": "^3.12.11",
