--- a/packages/perseus-core/tsconfig-build.json
+++ b/packages/perseus-core/tsconfig-build.json
@@ -6,9 +6,7 @@
         "paths": {
             // NOTE(kevinb): We have to repeat this here because TS doesn't do
             // intelligent merge of tsconfig.json files when using `extends`.
-            "@khanacademy/*": [
-                "../*/src"
-            ]
+            "@khanacademy/*": ["../*/src"]
         }
     },
     "references": [
