--- a/packages/perseus/tsconfig-build.json
+++ b/packages/perseus/tsconfig-build.json
@@ -8,9 +8,7 @@
             "raphael": ["../../vendor/raphael/raphael.js"],
             // NOTE(kevinb): We have to repeat this here because TS doesn't do
             // intelligent merge of tsconfig.json files when using `extends`.
-            "@khanacademy/*": [
-                "../*/src"
-            ]
+            "@khanacademy/*": ["../*/src"]
         }
     },
     "references": [
